mutt (1.5.20-9~unrel) UNRELEASED; urgency=low

  * hurd-i386 fixes:
    + Use libgdbm-dev for this arch until libtokyocabinet-dev is available.

 -- Christoph Berg <myon@debian.org>  Sun, 06 Jun 2010 12:58:59 +0200

mutt (1.5.20-8) unstable; urgency=low

  * debian/control:
    + Flip Maintainer and Uploaders. I'm pretty inactive these days.
    + Nuke DM-Upload-Allowed.
  * Explicitely use source format 1.0 due to the quilt magic we are using to
    built mutt-patched.
  * Switch to tokyocabinet (Closes: #530670)
  * Instead of trying to maintain the PATCHES file, put "quilt applied" output
    there.
  * debian/patches:
    + Update upstream/228671-pipe-mime.patch: Fix segfaults with ssh tunnels.
      Thanks Nikolaus Schulz (Closes: #569279)
    + Update upstream/528233-readonly-open.patch: Only chmod saved
      attachments, not existing files. (Closes: #572203)
    + Add upstream/573823-imap_internal_date: Set internaldate of messages
      appended to IMAP mailboxes (Closes: #573823)
    + Add upstream/542344-dont_fold_From_: Do not wrap From_ header
      (Closes: #542344)
    + Update: features/compressed-folders: Remove redundant comment in
      /etc/Muttrc. (Closes: #578096)

 -- Christoph Berg <myon@debian.org>  Tue, 01 Jun 2010 23:22:26 +0200

mutt (1.5.20-7) unstable; urgency=low

  * debian/NEWS: backported a note about the new behavior with attachments
    on the command line (Closes: 539276)
  * debian/patches:
    + upstream/548494-swedish-intl.patch: fixes to Swedish translation 
      (Closes: 548494)
    + upstream/553238-german-intl.patch: small fix to the German translation
      (Closes: 553238)
    + upstream/553321-ansi-escape-segfault.patch: prevent mutt from segfaulting
      with large ASCII escape sequences (Closes: 553321)
    + upstream/557395-muttrc-crypto.patch: small fix to the muttrc man 
      (Closes: 557395)
    + upstream/545316-header-color.patch: do not store the color in header cache
      (Closes: 545316)