@@ -1,0 +1,17 @@
+#!/bin/sh
+
+set -e
+
+if [ "$1" = "configure" ] ; then
+	# versions prior to 1.5.20-9 used dpkg-divert instead of update-alternatives
+	if [ "$2" ] && dpkg --compare-versions "$2" lt "1.5.20-9" ; then
+		dpkg-divert --remove --package mutt-patched --rename \
+			--divert /usr/bin/mutt.org /usr/bin/mutt
+	fi
+
+	update-alternatives --install /usr/bin/mutt mutt /usr/bin/mutt-patched 60
+fi
+
+#DEBHELPER#
+
+exit 0
