@@ -1,0 +1,11 @@
+#!/bin/sh
+
+set -e
+
+if [ "$1" = "configure" ] ; then
+	update-alternatives --install /usr/bin/mutt mutt /usr/bin/mutt-org 50
+fi
+
+#DEBHELPER#
+
+exit 0
