@@ -1,0 +1,13 @@
+#!/bin/sh
+
+set -e
+
+case "$1" in
+	remove|deconfigure)
+		update-alternatives --remove mutt /usr/bin/mutt-org
+		;;
+esac
+
+#DEBHELPER#
+
+exit 0
