@@ -2,6 +2,8 @@ mutt (1.5.20-9~unrel) UNRELEASED; urgency=low
 
   * hurd-i386 fixes:
     + Use libgdbm-dev for this arch until libtokyocabinet-dev is available.
+  * /usr/bin/mutt is an alternative now, instead of a diversion in
+    mutt-patched.
 
  -- Christoph Berg <myon@debian.org>  Sun, 06 Jun 2010 12:58:59 +0200
 
